Corrección y mejores prácticas en el contador

--- a/Exp9-reloj/Exp9-reloj.runs/impl_1/usage_statistics_webtalk.html
+++ b/Exp9-reloj/Exp9-reloj.runs/impl_1/usage_statistics_webtalk.html
@@ -4,11 +4,11 @@
   <TR ALIGN='CENTER' BGCOLOR='#A7BFDE'><TD COLSPAN='4'><B>software_version_and_target_device</B></TD></TR>
 <TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>beta</B></TD><TD>FALSE</TD>
   <TD BGCOLOR='#DBE5F1'><B>build_version</B></TD><TD>2086221</TD>
-</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>date_generated</B></TD><TD>Mon Aug 20 02:35:08 2018</TD>
+</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>date_generated</B></TD><TD>Tue Aug 21 21:45:23 2018</TD>
   <TD BGCOLOR='#DBE5F1'><B>os_platform</B></TD><TD>LIN64</TD>
 </TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>product_version</B></TD><TD>Vivado v2017.4 (64-bit)</TD>
   <TD BGCOLOR='#DBE5F1'><B>project_id</B></TD><TD>d3b669bdc18348ecb62b0b73a803849c</TD>
-</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>project_iteration</B></TD><TD>17</TD>
+</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>project_iteration</B></TD><TD>20</TD>
   <TD BGCOLOR='#DBE5F1'><B>random_id</B></TD><TD>65b31872c72b5ed6a1231cb7fda00aca</TD>
 </TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>registration_id</B></TD><TD>65b31872c72b5ed6a1231cb7fda00aca</TD>
   <TD BGCOLOR='#DBE5F1'><B>route_design</B></TD><TD>TRUE</TD>
@@ -21,7 +21,7 @@
  <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
   <TR ALIGN='CENTER' BGCOLOR='#A7BFDE'><TD COLSPAN='4'><B>user_environment</B></TD></TR>
 <TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>cpu_name</B></TD><TD>Intel(R) Xeon(R) CPU           E5450  @ 3.00GHz</TD>
-  <TD BGCOLOR='#DBE5F1'><B>cpu_speed</B></TD><TD>1998.002 MHz</TD>
+  <TD BGCOLOR='#DBE5F1'><B>cpu_speed</B></TD><TD>2996.790 MHz</TD>
 </TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>os_name</B></TD><TD>unknown</TD>
   <TD BGCOLOR='#DBE5F1'><B>os_release</B></TD><TD>unknown</TD>
 </TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>system_ram</B></TD><TD>8.000 GB</TD>
@@ -33,69 +33,71 @@
    <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>gui_handlers</B></TD></TR>
 <TR ALIGN='LEFT'>   <TD>addsrcwizard_specify_hdl_netlist_block_design=1</TD>
    <TD>addsrcwizard_specify_or_create_constraint_files=1</TD>
-   <TD>basedialog_cancel=13</TD>
-   <TD>basedialog_ok=58</TD>
+   <TD>basedialog_cancel=20</TD>
+   <TD>basedialog_ok=77</TD>
 </TR><TR ALIGN='LEFT'>   <TD>basedialog_yes=2</TD>
    <TD>cmdmsgdialog_ok=3</TD>
    <TD>constraintschooserpanel_add_files=1</TD>
    <TD>createsrcfiledialog_file_name=4</TD>
 </TR><TR ALIGN='LEFT'>   <TD>createsrcfiledialog_file_type=1</TD>
-   <TD>filesetpanel_file_set_panel_tree=89</TD>
-   <TD>filesetpanel_messages=1</TD>
-   <TD>flownavigatortreepanel_flow_navigator_tree=45</TD>
-</TR><TR ALIGN='LEFT'>   <TD>mainmenumgr_file=8</TD>
+   <TD>filesetpanel_file_set_panel_tree=99</TD>
+   <TD>filesetpanel_messages=3</TD>
+   <TD>flownavigatortreepanel_flow_navigator_tree=53</TD>
+</TR><TR ALIGN='LEFT'>   <TD>mainmenumgr_file=10</TD>
    <TD>mainmenumgr_help=2</TD>
-   <TD>mainmenumgr_open_recent_project=3</TD>
-   <TD>msgtreepanel_message_view_tree=43</TD>
-</TR><TR ALIGN='LEFT'>   <TD>msgview_clear_messages_resulting_from_user_executed=8</TD>
+   <TD>mainmenumgr_open_recent_project=8</TD>
+   <TD>msgtreepanel_message_view_tree=52</TD>
+</TR><TR ALIGN='LEFT'>   <TD>msgview_clear_messages_resulting_from_user_executed=10</TD>
    <TD>msgview_error_messages=5</TD>
-   <TD>msgview_warning_messages=9</TD>
+   <TD>msgview_warning_messages=12</TD>
    <TD>netlisttreeview_netlist_tree=1</TD>
 </TR><TR ALIGN='LEFT'>   <TD>pacommandnames_add_sources=2</TD>
-   <TD>pacommandnames_auto_connect_target=17</TD>
+   <TD>pacommandnames_auto_connect_target=21</TD>
    <TD>pacommandnames_auto_update_hier=4</TD>
    <TD>pacommandnames_new_project=1</TD>
 </TR><TR ALIGN='LEFT'>   <TD>pacommandnames_on_the_web=1</TD>
-   <TD>pacommandnames_open_hardware_manager=8</TD>
+   <TD>pacommandnames_open_hardware_manager=9</TD>
    <TD>pacommandnames_open_project=3</TD>
-   <TD>pacommandnames_run_bitgen=7</TD>
+   <TD>pacommandnames_run_bitgen=8</TD>
 </TR><TR ALIGN='LEFT'>   <TD>partchooser_boards=3</TD>
    <TD>partchooser_filter=1</TD>
    <TD>paviews_device=22</TD>
-   <TD>programdebugtab_open_target=17</TD>
-</TR><TR ALIGN='LEFT'>   <TD>programdebugtab_program_device=17</TD>
-   <TD>programfpgadialog_program=16</TD>
+   <TD>programdebugtab_open_target=24</TD>
+</TR><TR ALIGN='LEFT'>   <TD>programdebugtab_program_device=26</TD>
+   <TD>programfpgadialog_program=25</TD>
+   <TD>programfpgadialog_specify_bitstream_file=2</TD>
    <TD>projectnamechooser_choose_project_location=1</TD>
-   <TD>projectnamechooser_project_name=1</TD>
-</TR><TR ALIGN='LEFT'>   <TD>projecttab_close_design=1</TD>
+</TR><TR ALIGN='LEFT'>   <TD>projectnamechooser_project_name=1</TD>
+   <TD>projecttab_close_design=1</TD>
    <TD>srcchooserpanel_add_hdl_and_netlist_files_to_your_project=8</TD>
    <TD>srcchooserpanel_create_file=3</TD>
-   <TD>srcmenu_ip_hierarchy=4</TD>
-</TR><TR ALIGN='LEFT'>   <TD>statemonitor_reset_run=1</TD>
+</TR><TR ALIGN='LEFT'>   <TD>srcmenu_ip_hierarchy=4</TD>
+   <TD>statemonitor_reset_run=1</TD>
    <TD>syntheticagettingstartedview_recent_projects=1</TD>
-   <TD>syntheticastatemonitor_cancel=1</TD>
-   <TD>taskbanner_close=15</TD>
-</TR><TR ALIGN='LEFT'>   <TD>touchpointsurveydialog_no=1</TD>
+   <TD>syntheticastatemonitor_cancel=3</TD>
+</TR><TR ALIGN='LEFT'>   <TD>taskbanner_close=21</TD>
+   <TD>touchpointsurveydialog_no=1</TD>
 </TR>  </TABLE>
   <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
    <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>java_command_handlers</B></TD></TR>
 <TR ALIGN='LEFT'>   <TD>addsources=7</TD>
-   <TD>autoconnecttarget=17</TD>
+   <TD>autoconnecttarget=21</TD>
+   <TD>closeproject=2</TD>
    <TD>helpabout=1</TD>
-   <TD>launchprogramfpga=17</TD>
-</TR><TR ALIGN='LEFT'>   <TD>newproject=1</TD>
-   <TD>openhardwaremanager=16</TD>
+</TR><TR ALIGN='LEFT'>   <TD>launchprogramfpga=22</TD>
+   <TD>newproject=1</TD>
+   <TD>openhardwaremanager=20</TD>
    <TD>openproject=3</TD>
-   <TD>openrecenttarget=1</TD>
-</TR><TR ALIGN='LEFT'>   <TD>runbitgen=22</TD>
-   <TD>runimplementation=7</TD>
-   <TD>runsynthesis=14</TD>
-   <TD>showview=6</TD>
-</TR><TR ALIGN='LEFT'>   <TD>toolssettings=1</TD>
+</TR><TR ALIGN='LEFT'>   <TD>openrecenttarget=1</TD>
+   <TD>runbitgen=26</TD>
+   <TD>runimplementation=8</TD>
+   <TD>runsynthesis=17</TD>
+</TR><TR ALIGN='LEFT'>   <TD>showview=7</TD>
+   <TD>toolssettings=1</TD>
 </TR>  </TABLE>
 </TR><TR ALIGN='LEFT'>  <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
    <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>other_data</B></TD></TR>
-<TR ALIGN='LEFT'>   <TD>guimode=3</TD>
+<TR ALIGN='LEFT'>   <TD>guimode=9</TD>
 </TR>  </TABLE>
   <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
    <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>project_data</B></TD></TR>
@@ -141,13 +143,13 @@
 </TR><TR ALIGN='LEFT'>    <TD>gnd=12</TD>
     <TD>ibuf=6</TD>
     <TD>lut1=16</TD>
-    <TD>lut2=28</TD>
-</TR><TR ALIGN='LEFT'>    <TD>lut3=23</TD>
+    <TD>lut2=30</TD>
+</TR><TR ALIGN='LEFT'>    <TD>lut3=21</TD>
     <TD>lut4=70</TD>
     <TD>lut5=134</TD>
     <TD>lut6=61</TD>
 </TR><TR ALIGN='LEFT'>    <TD>obuf=17</TD>
-    <TD>vcc=18</TD>
+    <TD>vcc=16</TD>
 </TR>   </TABLE>
    </TD></TR>
    <TR><TD>
@@ -160,13 +162,13 @@
 </TR><TR ALIGN='LEFT'>    <TD>gnd=12</TD>
     <TD>ibuf=6</TD>
     <TD>lut1=16</TD>
-    <TD>lut2=28</TD>
-</TR><TR ALIGN='LEFT'>    <TD>lut3=23</TD>
+    <TD>lut2=30</TD>
+</TR><TR ALIGN='LEFT'>    <TD>lut3=21</TD>
     <TD>lut4=70</TD>
     <TD>lut5=134</TD>
     <TD>lut6=61</TD>
 </TR><TR ALIGN='LEFT'>    <TD>obuf=17</TD>
-    <TD>vcc=18</TD>
+    <TD>vcc=16</TD>
 </TR>   </TABLE>
    </TD></TR>
   </TABLE><BR>
@@ -192,8 +194,8 @@
    <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
     <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>results</B></TD></TR>
 <TR ALIGN='LEFT'>    <TD>cfgbvs-1=1</TD>
-    <TD>pdrc-153=4</TD>
-    <TD>plholdvio-2=4</TD>
+    <TD>pdrc-153=2</TD>
+    <TD>plholdvio-2=2</TD>
 </TR>   </TABLE>
    </TD></TR>
   </TABLE><BR>
@@ -250,7 +252,7 @@
     <TD>bidir_output_enable=1.000000</TD>
 </TR><TR ALIGN='LEFT'>    <TD>board_layers=12to15 (12 to 15 Layers)</TD>
     <TD>board_selection=medium (10&quot;x10&quot;)</TD>
-    <TD>clocks=0.002451</TD>
+    <TD>clocks=0.002172</TD>
     <TD>confidence_level_clock_activity=Medium</TD>
 </TR><TR ALIGN='LEFT'>    <TD>confidence_level_design_state=High</TD>
     <TD>confidence_level_device_models=High</TD>
@@ -259,10 +261,10 @@
 </TR><TR ALIGN='LEFT'>    <TD>confidence_level_overall=Low</TD>
     <TD>customer=TBD</TD>
     <TD>customer_class=TBD</TD>
-    <TD>devstatic=0.097176</TD>
+    <TD>devstatic=0.097175</TD>
 </TR><TR ALIGN='LEFT'>    <TD>die=xc7a100tcsg324-1</TD>
     <TD>dsp_output_toggle=12.500000</TD>
-    <TD>dynamic=0.036139</TD>
+    <TD>dynamic=0.035853</TD>
     <TD>effective_thetaja=4.6</TD>
 </TR><TR ALIGN='LEFT'>    <TD>enable_probability=0.990000</TD>
     <TD>family=artix7</TD>
@@ -272,7 +274,7 @@
     <TD>i/o=0.030459</TD>
     <TD>input_toggle=12.500000</TD>
     <TD>junction_temp=25.6 (C)</TD>
-</TR><TR ALIGN='LEFT'>    <TD>logic=0.001547</TD>
+</TR><TR ALIGN='LEFT'>    <TD>logic=0.001536</TD>
     <TD>mgtavcc_dynamic_current=0.000000</TD>
     <TD>mgtavcc_static_current=0.000000</TD>
     <TD>mgtavcc_total_current=0.000000</TD>
@@ -283,12 +285,12 @@
 </TR><TR ALIGN='LEFT'>    <TD>mgtavtt_voltage=1.200000</TD>
     <TD>netlist_net_matched=NA</TD>
     <TD>off-chip_power=0.000000</TD>
-    <TD>on-chip_power=0.133315</TD>
+    <TD>on-chip_power=0.133029</TD>
 </TR><TR ALIGN='LEFT'>    <TD>output_enable=1.000000</TD>
     <TD>output_load=5.000000</TD>
     <TD>output_toggle=12.500000</TD>
     <TD>package=csg324</TD>
-</TR><TR ALIGN='LEFT'>    <TD>pct_clock_constrained=1.090000</TD>
+</TR><TR ALIGN='LEFT'>    <TD>pct_clock_constrained=0.960000</TD>
     <TD>pct_inputs_defined=16</TD>
     <TD>platform=lin64</TD>
     <TD>process=typical</TD>
@@ -297,7 +299,7 @@
     <TD>read_saif=False</TD>
     <TD>set/reset_probability=0.000000</TD>
 </TR><TR ALIGN='LEFT'>    <TD>signal_rate=False</TD>
-    <TD>signals=0.001682</TD>
+    <TD>signals=0.001686</TD>
     <TD>simulation_file=None</TD>
     <TD>speedgrade=-1</TD>
 </TR><TR ALIGN='LEFT'>    <TD>static_prob=False</TD>
@@ -326,9 +328,9 @@
     <TD>vccbram_static_current=0.000246</TD>
 </TR><TR ALIGN='LEFT'>    <TD>vccbram_total_current=0.000246</TD>
     <TD>vccbram_voltage=1.000000</TD>
-    <TD>vccint_dynamic_current=0.005764</TD>
-    <TD>vccint_static_current=0.015066</TD>
-</TR><TR ALIGN='LEFT'>    <TD>vccint_total_current=0.020830</TD>
+    <TD>vccint_dynamic_current=0.005479</TD>
+    <TD>vccint_static_current=0.015065</TD>
+</TR><TR ALIGN='LEFT'>    <TD>vccint_total_current=0.020544</TD>
     <TD>vccint_voltage=1.000000</TD>
     <TD>vcco12_dynamic_current=0.000000</TD>
     <TD>vcco12_static_current=0.000000</TD>
@@ -477,9 +479,9 @@
     <TD>lut1_functional_category=LUT</TD>
     <TD>lut1_used=16</TD>
 </TR><TR ALIGN='LEFT'>    <TD>lut2_functional_category=LUT</TD>
-    <TD>lut2_used=28</TD>
+    <TD>lut2_used=30</TD>
     <TD>lut3_functional_category=LUT</TD>
-    <TD>lut3_used=23</TD>
+    <TD>lut3_used=21</TD>
 </TR><TR ALIGN='LEFT'>    <TD>lut4_functional_category=LUT</TD>
     <TD>lut4_used=70</TD>
     <TD>lut5_functional_category=LUT</TD>
@@ -542,19 +544,19 @@
     <TD>lut_ff_pairs_with_one_unused_flip_flop_fixed=0</TD>
     <TD>lut_ff_pairs_with_one_unused_flip_flop_used=139</TD>
 </TR><TR ALIGN='LEFT'>    <TD>lut_ff_pairs_with_one_unused_lut_output_fixed=139</TD>
-    <TD>lut_ff_pairs_with_one_unused_lut_output_used=131</TD>
+    <TD>lut_ff_pairs_with_one_unused_lut_output_used=130</TD>
     <TD>lut_flip_flop_pairs_available=63400</TD>
     <TD>lut_flip_flop_pairs_fixed=0</TD>
 </TR><TR ALIGN='LEFT'>    <TD>lut_flip_flop_pairs_used=166</TD>
     <TD>lut_flip_flop_pairs_util_percentage=0.26</TD>
     <TD>slice_available=15850</TD>
     <TD>slice_fixed=0</TD>
-</TR><TR ALIGN='LEFT'>    <TD>slice_used=146</TD>
-    <TD>slice_util_percentage=0.92</TD>
+</TR><TR ALIGN='LEFT'>    <TD>slice_used=140</TD>
+    <TD>slice_util_percentage=0.88</TD>
     <TD>slicel_fixed=0</TD>
-    <TD>slicel_used=97</TD>
+    <TD>slicel_used=95</TD>
 </TR><TR ALIGN='LEFT'>    <TD>slicem_fixed=0</TD>
-    <TD>slicem_used=49</TD>
+    <TD>slicem_used=45</TD>
     <TD>unique_control_sets_used=25</TD>
     <TD>using_o5_and_o6_fixed=25</TD>
 </TR><TR ALIGN='LEFT'>    <TD>using_o5_and_o6_used=48</TD>
@@ -611,8 +613,8 @@
    <TR><TD>
    <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
     <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>usage</B></TD></TR>
-<TR ALIGN='LEFT'>    <TD>actual_expansions=461666</TD>
-    <TD>bogomips=5994</TD>
+<TR ALIGN='LEFT'>    <TD>actual_expansions=322350</TD>
+    <TD>bogomips=5993</TD>
     <TD>bram18=0</TD>
     <TD>bram36=0</TD>
 </TR><TR ALIGN='LEFT'>    <TD>bufg=0</TD>
@@ -621,15 +623,15 @@
     <TD>ctrls=25</TD>
 </TR><TR ALIGN='LEFT'>    <TD>dsp=0</TD>
     <TD>effort=2</TD>
-    <TD>estimated_expansions=325686</TD>
+    <TD>estimated_expansions=331092</TD>
     <TD>ff=310</TD>
 </TR><TR ALIGN='LEFT'>    <TD>global_clocks=1</TD>
     <TD>high_fanout_nets=0</TD>
     <TD>iob=23</TD>
     <TD>lut=307</TD>
-</TR><TR ALIGN='LEFT'>    <TD>movable_instances=744</TD>
-    <TD>nets=926</TD>
-    <TD>pins=4281</TD>
+</TR><TR ALIGN='LEFT'>    <TD>movable_instances=742</TD>
+    <TD>nets=924</TD>
+    <TD>pins=4277</TD>
     <TD>pll=0</TD>
 </TR><TR ALIGN='LEFT'>    <TD>router_runtime=0.000000</TD>
     <TD>router_timing_driven=1</TD>
@@ -682,10 +684,10 @@
    <TR><TD>
    <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
     <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>usage</B></TD></TR>
-<TR ALIGN='LEFT'>    <TD>elapsed=00:01:11s</TD>
+<TR ALIGN='LEFT'>    <TD>elapsed=00:01:00s</TD>
     <TD>hls_ip=0</TD>
-    <TD>memory_gain=482.168MB</TD>
-    <TD>memory_peak=1623.773MB</TD>
+    <TD>memory_gain=481.574MB</TD>
+    <TD>memory_peak=1623.176MB</TD>
 </TR>   </TABLE>
    </TD></TR>
   </TABLE><BR>
